added rapidid translators comment
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@6723 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/foxtrick.properties
+++ b/content/foxtrick.properties
@@ -20,10 +20,12 @@ foxtrick.ForumPreview.desc=Allows showing a post preview (Also works for mails, 
 foxtrick.AddLeaveConfButton.desc=Adds a 'Leave forum' button to each forum folder
 foxtrick.StarsCounter.desc=Adds the total number of stars to the match lineup page
 foxtrick.MoveLinks.desc=Moves the manager's series and flag links to the message header. Note: the 'Show avatars and info' function in Hattrick must be switched on for this to work!
+#AttVsDef
 foxtrick.AttVsDef.desc=Adds attack/defense comparison to the match page
 foxtrick.AttVsDef.oldstyle.desc=old style
 foxtrick.AttVsDef.newstyle.desc=new style
 foxtrick.AttVsDef.oldstyleifkseparated.desc=old style (separated ind. set pieces)
+#Ratings
 foxtrick.Ratings.desc=Adds ratings to the match page
 foxtrick.Ratings.HatStats.desc=HatStats
 foxtrick.Ratings.HatStatsDetailed.desc=HatStats (detailed)
@@ -34,6 +36,7 @@ foxtrick.Ratings.VnukStats.desc=VnukStats
 foxtrick.Ratings.HTitaVal.desc=HTitaVal
 foxtrick.Ratings.GardierStats.desc=GardierStats
 foxtrick.BookmarkAdjust.desc=Change the icon associated to a bookmark inserting in the bookmark comment the correspondent code in square bracket: e.g. [cyan] will show the cyan icon. Possible values: aqua, B, black, blue, brown, cyan, darkpurple, green, idea, lightblue, lightgreen, orange, pink, purple, red, white, yellow
+#MedianTransferPrice
 foxtrick.MedianTransferPrice.desc=Shows a median transfer price in transfer compare
 foxtrick.FlagCollectionToMap.desc=Shows a world map with all the countries which flags you have collected in each category
 foxtrick.TransferSearchFilters.desc=Allows for transfer list search filter templates
@@ -47,6 +50,7 @@ foxtrick.StaffMarker.desc=Marks officials' nicks on the forums and on team pages
 foxtrick.StaffMarker.manager.desc=Mark officials' nicks on team pages.
 foxtrick.StaffMarker.own.desc=Custom markers in JSON format with user ID as key and style as value, e.g. {"1001" : "color: red;", "1002" : "background-color: yellow;"}
 foxtrick.StaffMarker.flag.desc=Adds flags to users in the select box
+#ForumYouthIcons
 foxtrick.ForumYouthIcons.desc=Displays a linkbar for the youth academy (Also works for mail, Press announcements, Guestbook and Ads)
 foxtrick.ForumYouthIcons.q.desc=Adds icon for quote tags if missing
 foxtrick.ForumYouthIcons.user_id.desc=Adds icon for UserID
@@ -64,6 +68,7 @@ foxtrick.ForumYouthIcons.pre.desc=Adds icon for Forum 'pre' format
 foxtrick.ForumYouthIcons.table.desc=Adds icon for table. Custom tag accepts regular expresions (Mask \ with additional \, eg \\.).
 foxtrick.ForumYouthIcons.debug.desc=Adds icon for FoxTrick debug log
 foxtrick.ForumYouthIcons.settings.desc=Adds icon for FoxTrick settings
+#FormatPostingText
 foxtrick.FormatPostingText.desc=Replaces FoxTrick HT-ML tags with HTML tags (i.e. 'pre' element)
 foxtrick.CopyPostID.desc=Provide a link to copy a post's ID
 foxtrick.CopyPostID.AddCopyIcon.desc=Adds an icon Copy PostId before first PostId
@@ -156,6 +161,7 @@ foxtrick.CustomMedals.desc=Replaces the new Hattrick medals with the old style o
 foxtrick.SeniorTeamShortCuts.desc=Adds coach and lastlineup links to senior teams
 foxtrick.SeniorTeamShortCuts.OnlyOtherPages.desc=Show only on other team pages
 foxtrick.SeniorTeamShortCuts.AllPages.desc=Show on all pages
+#ExtendedPlayerDetails
 foxtrick.ExtendedPlayerDetails.desc=Displays some helpful information in the player details
 foxtrick.ExtendedPlayerDetails.SWD.desc=Display contract duration as seasons - weeks - days
 foxtrick.ExtendedPlayerDetails.SW.desc=Display contract duration as seasons - weeks
@@ -196,6 +202,7 @@ foxtrick.SkinPlugin.Skin2.desc=Activate skin 2 (link style)
 foxtrick.CurrencyConverter.desc=Converting a HT currency
 foxtrick.MovePlayerStatement.desc=Moves player statements to the players image. If images are disabled, the statements will be removed.
 foxtrick.TickerColoring.desc=The different events displayed in the news ticker will be coloured.
+#ExtraShortcuts
 foxtrick.ExtraShortcuts.desc=Adds shortcuts to the main shortcuts
 foxtrick.ExtraShortcuts.AddLeft.desc=Check to add icon left, uncheck to add them right
 foxtrick.ExtraShortcuts.AddSpace.desc=Increase space for shortcut icons
@@ -209,6 +216,7 @@ foxtrick.ExtraShortcuts.No9.desc=No9 Radio
 foxtrick.ExtraShortcuts.Latehome.desc=Latehome Radio
 foxtrick.ExtraShortcuts.Balkaradio.desc=Balkaradio
 foxtrick.ExtraShortcuts.Downtime.desc=Downtime Radio
+#CopyMatchID
 foxtrick.CopyMatchID.desc=Copies the match id when clicking on the league/cup/friendly icon on matches or matches archive page. For supporters works as well on the 'Head to Head' page ('Latest matches' and 'History' tabs).
 foxtrick.HeaderFix.desc=Fixes the Header while scrolling (affects also on other pages of HT)
 foxtrick.HeaderFix.FixLeft.desc=Also fixes the submenu while scrolling
@@ -237,6 +245,7 @@ foxtrick.LeagueNewsFilter.all.desc=Show all news
 foxtrick.LeagueNewsFilter.friendlies.desc=Show only international friendlies and changed coaches
 foxtrick.LeagueNewsFilter.transfers.desc=Show only transfers
 foxtrick.LeagueNewsFilter.lineup_changes.desc=Show only lineup changes
+#MoveManagerOnline
 foxtrick.MoveManagerOnline.desc=Moves managers online up on region page. Caution! This gets very slow if the list of online players get over 100.
 foxtrick.TeamPopupLinks.TeamLinks.desc=Add popups to team links
 foxtrick.TeamPopupLinks.UserLinks.desc=Add popups to manager links
@@ -267,16 +276,19 @@ foxtrick.SkillColoring.skill_select.desc=Show also numbers at transfer search i.
 foxtrick.SkillColoring.no_skill_links.desc=Hides the underlining and green font given by HTs
 foxtrick.BackgroundFixed.desc=Static background image.
 foxtrick.MatchIncome.desc=Match income in the match report
+#YouthSkillHideUnknown
 foxtrick.YouthSkillHideUnknown.desc=Hide unknown skills and/or "maximum" word on youth players page
 foxtrick.YouthSkillHideUnknown.HideUnknown.desc=Hide unknown skills
 foxtrick.YouthSkillHideUnknown.HideMaximalKeyWord.desc=Hide "maximum" word to gain more space
 foxtrick.SkillTable.desc=Show skills of players as a table.
 foxtrick.SkillTable.OtherTeams.desc=Enable for other teams
 foxtrick.SkillTable.ColouredYouth.desc=Show coloured youth skills
+#HighlightCupwins
 foxtrick.HighlightCupwins.desc=Highlight winning teams on cup matches page
 foxtrick.HighlightCupwins.HighlightCupsets.desc=Highlight cupsets (matches won by the team of lower ranking)
 foxtrick.SkillTranslation.desc=Adds English translations to skills on help/denominations page
 foxtrick.ReadHtPrefs.desc=Automatically detect language, country, and date format
+#CountryList
 foxtrick.CountryList.desc=Modifications for country names
 foxtrick.CountryList.SelectBoxes.desc=Replaces English country names in select boxes by their original names
 foxtrick.CountryList.TeamPage.desc=Displays a textlink to the league before the region and series on team page
@@ -603,6 +615,7 @@ JoinedSince.abbr=Since
 Hotlist=Hotlist
 Hotlist.abbr=Hot
 
+#matchdetail
 foxtrick.matchdetail.midfield=Midfield
 foxtrick.matchdetail.attack=Attack
 foxtrick.matchdetail.defence=Defence
@@ -799,7 +812,7 @@ TransferSearchResultFilters.days=Days:
 minimum=At least
 maximum=Maximum
 
-# Rapid ID
+# Rapid ID. maximum like 11 characters or it messes up simple skin 'right now' 
 foxtrick.RapidId.ViewById=View By ID
 
 # SkillTable
@@ -931,6 +944,7 @@ status.disabled=disabled
 prefs.screenshot=Screenshot
 
 # tabs in preferences page
+#tabs
 tab.main=Main
 tab.pagefiltered=Page modules
 tab.allfiltered=Universal modules
@@ -954,6 +968,7 @@ pref.printDateFormat=Date format for printing
 foxtrick.prefs.captionShowOnStatusBar=Status bar icon
 foxtrick.prefs.captionCleanupBranch=Stored preferences
 foxtrick.prefs.captionLoadSavePrefs=Export or import preferences
+#statusbarpref
 foxtrick.prefs.statusbarpref=Display FoxTrick icon on status bar (requires restart)
 foxtrick.prefs.labelCleanupBranch=Restore default preferences (Only preferences, no personal settings.)
 foxtrick.prefs.labelDisableAll=Disable all modules
