--- a/manifest.json
+++ b/manifest.json
@@ -179,9 +179,9 @@
 		"http://www.hattrick-youthclub.org/*",
 		"http://www.fantamondi.it/*"
 	],
-	"browser_action" : {
-		"default_title" : "FoxTrick",
-		"default_icon" : "skin/icon-128.png"
+	"page_action": {
+		"default_icon": "skin/icon-24.png",
+		"default_title": "FoxTrick enabled"
 	},
 	"options_page" : "content/preferences.xhtml",
 	"update_url" : "http://foxtrick.foundationhorizont.org/nightly/chrome/update.xml",
