skill-table: customizing fix and added youthplayer marker
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@6740 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/foxtrick.properties
+++ b/content/foxtrick.properties
@@ -611,6 +611,8 @@ Current_league.abbr=League
 
 JoinedSince=Joined since
 JoinedSince.abbr=Since
+HomeGrown=Youthplayer
+HomeGrown.abbr=YP
 
 Hotlist=Hotlist
 Hotlist.abbr=Hot
