skilltable: titles to cryptic cells
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@6741 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/foxtrick.properties
+++ b/content/foxtrick.properties
@@ -617,6 +617,9 @@ HomeGrown.abbr=YP
 Hotlist=Hotlist
 Hotlist.abbr=Hot
 
+skilltable.youthplayer=youthplayer
+skilltable.rebought_youthplayer=rebought youthplayer
+
 #matchdetail
 foxtrick.matchdetail.midfield=Midfield
 foxtrick.matchdetail.attack=Attack
