disable oauth option (default off)
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@6756 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/foxtrick.properties
+++ b/content/foxtrick.properties
@@ -989,6 +989,7 @@ foxtrick.prefs.disableTemporaryLabel=Disable temporarily
 foxtrick.prefs.saved=Preferences saved!
 foxtrick.prefs.loaded=Preferences loaded!
 foxtrick.prefs.dismissNotice=(click to dismiss this notice)
+foxtrick.prefs.disableOauth=Disable OAuth
 
 link.title=Links
 link.homepage=Homepage
