my-monitor: added team logos and sorting buttons
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@6761 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/foxtrick.properties
+++ b/content/foxtrick.properties
@@ -896,6 +896,8 @@ AddHomegrown=Add homegrown players
 RemoveBotPlayers=Remove bot players
 showTimeInClub=Show time in club
 Filter=Filter
+sort.up=Up
+sort.down=Down
 
 # buttons
 button.ok=OK
