--- a/content/foxtrick.properties
+++ b/content/foxtrick.properties
@@ -991,7 +991,8 @@ foxtrick.prefs.disableTemporaryLabel=Disable temporarily
 foxtrick.prefs.saved=Preferences saved!
 foxtrick.prefs.loaded=Preferences loaded!
 foxtrick.prefs.dismissNotice=(click to dismiss this notice)
-foxtrick.prefs.disableOauth=Disable OAuth
+
+pref.xmlLoad=Load XML for extra information from Hattrick
 
 link.title=Links
 link.homepage=Homepage
