--- a/content/foxtrick.properties
+++ b/content/foxtrick.properties
@@ -898,6 +898,8 @@ showTimeInClub=Show time in club
 Filter=Filter
 sort.up=Up
 sort.down=Down
+action.clearCache=Clear cache
+action.clearCache.title=Clears FoxTricks Xml cache. FoxTrick downsloads extra information from Hattrick's servers on demand. Untill you close your browser, FoxTrick will use locally stored copies of those afterwards. On rare occasions they can get outdated. Clear the cache if you want FoxTrick to download those extra informations again.
 
 # buttons
 button.ok=OK
