--- a/content/foxtrick.properties
+++ b/content/foxtrick.properties
@@ -853,6 +853,7 @@ CrossTable.noMatches=No matches has been played yet.
 
 # MyMonitor
 MyMonitor.header=My Monitor
+MyMonitor.teams=%s teams in monitor
 MyMonitor.add=Add to my monitor
 MyMonitor.remove=Remove from my monitor
 MyMonitor.addHelp=Go to the team that you want to monitor, and you could see a box on the sidebar for adding the team.
