foxtrick.properties: adjust description for monitor add/remove.
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@6774 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/foxtrick.properties
+++ b/content/foxtrick.properties
@@ -854,8 +854,8 @@ CrossTable.noMatches=No matches has been played yet.
 # MyMonitor
 MyMonitor.header=My Monitor
 MyMonitor.teams=%s teams in monitor
-MyMonitor.add=Add to my monitor
-MyMonitor.remove=Remove from my monitor
+MyMonitor.add=Monitor this team
+MyMonitor.remove=Remove this team from my monitor
 MyMonitor.addHelp=Go to the team that you want to monitor, and you could see a box on the sidebar for adding the team.
 MyMonitor.removeTeam=Select a team to remove:
 # %n, %t and %i will be replaced by team name, type and ID respectively
