Adjust preferences interface layout for large screens. (Fixes #782)
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@6799 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/foxtrick.properties
+++ b/content/foxtrick.properties
@@ -911,6 +911,7 @@ button.save=Save
 button.go=Go!
 button.add=Add
 button.remove=Remove
+button.top=Top
 button.authorize=Authorize
 button.export=Export
 button.import=Import
