Move const.js to env.js and add environment function.
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@6801 1e3807c3-0949-0410-b78e-337b627472c1

--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
 	"background_page" : "content/background.html",
 	"content_scripts" : [ {
 		"js" : [
-			"content/const.js",
+			"content/env.js",
 			"content/prefs.js",
 			"content/pages.js",
 			"content/l10n.js",
