Move CSS/JavaScript injection functions from foxtrick.js to util/inject.js.
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@6806 1e3807c3-0949-0410-b78e-337b627472c1

--- a/manifest.json
+++ b/manifest.json
@@ -20,6 +20,7 @@
 			"content/util/currency.js",
 			"content/util/html.js",
 			"content/util/ht-ml.js",
+			"content/util/inject.js",
 			"content/util/layout.js",
 			"content/util/links.js",
 			"content/util/match-view.js",
