Move entry functions from foxtrick.js to entry.js.
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@6809 1e3807c3-0949-0410-b78e-337b627472c1

--- a/manifest.json
+++ b/manifest.json
@@ -157,6 +157,7 @@
 			"content/shortcuts-and-tweaks/transfer-search-result-filters.js",
 			"content/modules.js",
 			"content/foxtrick.js",
+			"content/entry.js",
 			"content/loader-chrome.js"
 		],
 		"matches" : [
