--- a/content/foxtrick.properties
+++ b/content/foxtrick.properties
@@ -330,6 +330,7 @@ foxtrick.FriendlyInterface.NtLinkForNtPlayer.desc=Display national teams as link
 foxtrick.FriendlyInterface.HideAnswerTo.desc=Hide answer-to links in guest book
 foxtrick.FriendlyInterface.HideSpeechlessSecretary.desc=Hide the secretary if he has nothing to report
 foxtrick.MyMonitor.desc=Monitor recent matches of friends and foes at My Hattrick
+foxtrick.MyMonitor.TeamIcons.desc=Show team icons
 foxtrick.MarkAllAsRead.desc=A button to mark threads in all forums as read
 foxtrick.ShowFriendlyBooked.desc=Show whether a team has booked a friendly on series page
 foxtrick.ShowFriendlyBooked.OnDemand.desc=Show friendlies on demand only
