session-store in seperate file. started chrome background/loader cleaning
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@6823 1e3807c3-0949-0410-b78e-337b627472c1

--- a/manifest.json
+++ b/manifest.json
@@ -4,6 +4,7 @@
 		"js" : [
 			"content/env.js",
 			"content/prefs.js",
+			"content/session-store.js",
 			"content/pages.js",
 			"content/l10n.js",
 			"content/helper.js",
