Move api-proxy.js to util/api.js, since it is really a utility not a module.
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@6847 1e3807c3-0949-0410-b78e-337b627472c1

--- a/manifest.json
+++ b/manifest.json
@@ -13,10 +13,10 @@
 			"content/read-ht-prefs.js",
 			"content/forum-stage.js",
 			"content/core.js",
-			"content/api-proxy.js",
 			"content/add-class.js",
 			"content/lib/oauth.js",
 			"content/lib/sha1.js",
+			"content/util/api.js",
 			"content/util/currency.js",
 			"content/util/html.js",
 			"content/util/ht-ml.js",
