renamed util/links.js to to util/links-box.js (opera file naming issue) moved links/links.js up in xuls/htmls to be on the save side for loading order
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@6848 1e3807c3-0949-0410-b78e-337b627472c1

--- a/manifest.json
+++ b/manifest.json
@@ -22,7 +22,7 @@
 			"content/util/ht-ml.js",
 			"content/util/inject.js",
 			"content/util/layout.js",
-			"content/util/links.js",
+			"content/util/links-box.js",
 			"content/util/match-view.js",
 			"content/util/misc.js",
 			"content/util/note.js",
@@ -81,7 +81,8 @@
 			"content/information-aggregation/transfer-deadline.js",
 			"content/information-aggregation/youth-promotes.js",
 			"content/information-aggregation/youth-series-estimation.js",
-			"content/information-aggregation/supporterstats-enhancements.js",			
+			"content/information-aggregation/supporterstats-enhancements.js",
+			"content/links/links.js",
 			"content/links/links-achievements.js",
 			"content/links/links-alliances.js",
 			"content/links/links-arena.js",
@@ -91,7 +92,6 @@
 			"content/links/links-country.js",
 			"content/links/links-economy.js",
 			"content/links/links-fans.js",
-			"content/links/links.js",
 			"content/links/links-league.js",
 			"content/links/links-manager.js",
 			"content/links/links-match.js",
