opera: enabled paste for copy buttons
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@6858 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/foxtrick.properties
+++ b/content/foxtrick.properties
@@ -706,6 +706,8 @@ CopyYouth.fixturesSource=Copy HTML source of fixtures
 CopyYouth.fixturesSource.copied=HTML source of fixtures has been copied.
 CopyYouth.goto=Go to %s
 
+PasteClick.desc=Paste with SHIFT+LEFT MOUSE CLICK
+
 foxtrick.tweaks.youthclub=hattrick-youthclub.org
 foxtrick.tweaks.copyskilltable=Copy skill table to clipboard (in HT-ML)
 foxtrick.tweaks.skilltablecopied=The skill table source has been copied to the clipboard.
