Move background.js to background-chrome.js.
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@6860 1e3807c3-0949-0410-b78e-337b627472c1

--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
-	"background_page" : "content/background.html",
+	"background_page" : "content/background-chrome.html",
 	"content_scripts" : [ {
 		"js" : [
 			"content/env.js",
