--- a/manifest.json
+++ b/manifest.json
@@ -25,6 +25,7 @@
 			"content/util/links-box.js",
 			"content/util/match-view.js",
 			"content/util/misc.js",
+			"content/util/module.js",
 			"content/util/note.js",
 			"content/util/notify.js",
 			"content/util/session-store.js",
