--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
-	"background_page" : "content/background-chrome.html",
+	"background_page" : "content/background.html",
 	"content_scripts" : [ {
 		"js" : [
 			"content/env.js",
