--- a/manifest.json
+++ b/manifest.json
@@ -14,6 +14,7 @@
 			"content/util/currency.js",
 			"content/util/html.js",
 			"content/util/ht-ml.js",
+			"content/util/id.js",
 			"content/util/inject.js",
 			"content/util/layout.js",
 			"content/util/links-box.js",
@@ -32,7 +33,6 @@
 			"content/pages/youth-player.js",
 			"content/pages/transfer-search-results.js",
 			"content/pages/match.js",
-			"content/helper.js",
 			"content/redirections.js",
 			"content/read-ht-prefs.js",
 			"content/forum-stage.js",
