safari: alerts default off. not notification and no html5 audio!? for current safari it seems
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@6914 1e3807c3-0949-0410-b78e-337b627472c1

--- a/Info.plist
+++ b/Info.plist
@@ -54,6 +54,7 @@
 				<string>content/stats.js</string>
 				<string>content/lib/oauth.js</string>
 				<string>content/lib/sha1.js</string>
+				<string>content/lib/jquery.js</string>
 				<string>content/util/api.js</string>
 				<string>content/util/currency.js</string>
 				<string>content/util/html.js</string>
@@ -223,6 +224,8 @@
 			<string>All</string>
 		</dict>
 	</dict>
+	<key>Update Manifest URL</key>
+	<string>http://foxtrick.foundationhorizont.org/nightly/safari/update.plist</string>
 	<key>Website</key>
 	<string>http://code.google.com/foxtrick/</string>
 </dict>
