chrome: permissions clipboardWrite (needed for chrome 13)
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@6928 1e3807c3-0949-0410-b78e-337b627472c1

--- a/manifest.json
+++ b/manifest.json
@@ -177,6 +177,7 @@
 	"permissions" : [
 		"contextMenus",
 		"notifications",
+		"clipboardWrite",
 		"*://*.hattrick.org/*",
 		"http://www.hattrick-youthclub.org/*",
 		"http://www.fantamondi.it/*"
