locale/de/foxtrick.properties update
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@6934 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/foxtrick.properties
+++ b/content/foxtrick.properties
@@ -330,7 +330,7 @@ foxtrick.FriendlyInterface.NtLinkForNtPlayer.desc=Display national teams as link
 foxtrick.FriendlyInterface.HideAnswerTo.desc=Hide answer-to links in guest book
 foxtrick.FriendlyInterface.HideSpeechlessSecretary.desc=Hide the secretary if he has nothing to report
 foxtrick.MyMonitor.desc=Monitor recent matches of friends and foes at My Hattrick
-foxtrick.MyMonitor.TeamIcons.desc=Show team icons
+foxtrick.MyMonitor.TeamIcons.desc=Show team logos
 foxtrick.MarkAllAsRead.desc=A button to mark threads in all forums as read
 foxtrick.ShowFriendlyBooked.desc=Show whether a team has booked a friendly on series page
 foxtrick.ShowFriendlyBooked.OnDemand.desc=Show friendlies on demand only
@@ -992,7 +992,7 @@ foxtrick.prefs.saved=Preferences saved!
 foxtrick.prefs.loaded=Preferences loaded!
 foxtrick.prefs.dismissNotice=(click to dismiss this notice)
 
-pref.xmlLoad=Load XML for extra information from Hattrick
+pref.xmlLoad=Load XMLs for extra information from Hattrick
 
 link.title=Links
 link.homepage=Homepage
