Add copy-button.js as utilities for adding a copy button.
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@6945 1e3807c3-0949-0410-b78e-337b627472c1

--- a/Info.plist
+++ b/Info.plist
@@ -56,6 +56,7 @@
 				<string>content/lib/sha1.js</string>
 				<string>content/lib/jquery.js</string>
 				<string>content/util/api.js</string>
+				<string>content/util/copy-button.js</string>
 				<string>content/util/currency.js</string>
 				<string>content/util/html.js</string>
 				<string>content/util/ht-ml.js</string>
