foxtrick.properties: shorten copy function descriptions.
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@6996 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/foxtrick.properties
+++ b/content/foxtrick.properties
@@ -680,7 +680,7 @@ CurrentSquad=Current squad
 # Look on your Manager page (Club -> Manager) to the top right box title to see how you should translate the string below
 foxtrick.tweaks.actions=Actions
 foxtrick.tweaks.writeinguestbook=Write in Guestbook
-foxtrick.tweaks.copyplayerad=Copy player ad to clipboard
+foxtrick.tweaks.copyplayerad=Copy player ad
 foxtrick.tweaks.copied=The player ad has been copied to the clipboard.
 
 ratings.HatStats=HatStats
@@ -691,19 +691,18 @@ ratings.HTitaVal=HTitaVal
 ratings.GardierStats=GardierStats
 
 CopyRatings.both=Copy ratings (in HT-ML)
-CopyRatings.home=Copy home team ratings (in HT-ML)
-CopyRatings.away=Copy away team ratings (in HT-ML)
+CopyRatings.home=Copy home ratings (in HT-ML)
+CopyRatings.away=Copy away ratings (in HT-ML)
 CopyRatings.copied=The ratings have been copied to the clipboard.
 
-CopyYouth.title=Copy Youth functions
 CopyYouth.trainingReport=Copy training report
 CopyYouth.trainingReport.copied=Training report has been copied.
 CopyYouth.scoutComment=Copy scout comment
 CopyYouth.scoutComment.copied=Scout comment has been copied.
-CopyYouth.playerSource=Copy HTML source of player (for hattrick-youthclub.org)
-CopyYouth.playerSource.copied=HTML source of player has been copied.
-CopyYouth.fixturesSource=Copy HTML source of fixtures
-CopyYouth.fixturesSource.copied=HTML source of fixtures has been copied.
+CopyYouth.playerSource=Copy player source
+CopyYouth.playerSource.copied=Player source has been copied.
+CopyYouth.fixturesSource=Copy fixtures source
+CopyYouth.fixturesSource.copied=Fixtures source has been copied.
 CopyYouth.goto=Go to %s
 
 PasteClick.desc=Paste with SHIFT+LEFT MOUSE CLICK
