manifest.json: use *:// instead of http:// for permissions at hattrick.org.
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@7010 1e3807c3-0949-0410-b78e-337b627472c1

--- a/manifest.json
+++ b/manifest.json
@@ -180,7 +180,7 @@
 		"contextMenus",
 		"notifications",
 		"clipboardWrite",
-		"http://*.hattrick.org/*",
+		"*://*.hattrick.org/*",
 		"http://www.hattrick-youthclub.org/*",
 		"http://www.fantamondi.it/*"
 	],
