locale/de/foxtrick.properties: short copy icons desc
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@7014 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/foxtrick.properties
+++ b/content/foxtrick.properties
@@ -232,7 +232,7 @@ foxtrick.NewMail.NotifyForum.desc=Show a notification if there are new forum rep
 foxtrick.CopyYouth.desc=Copy functions for youth reports and sources
 foxtrick.CopyYouth.TrainingReport.desc=Training report
 foxtrick.CopyYouth.ScoutComment.desc=Scout comment
-foxtrick.CopyYouth.PlayerSource.desc=Player sourcce
+foxtrick.CopyYouth.PlayerSource.desc=Player source
 foxtrick.CopyYouth.FixturesSource.desc=Fixtures source
 foxtrick.PlayerBirthday.desc=Shows last and coming birthdays in players overview
 foxtrick.MovePlayerSelectbox.desc=Moves players selectbox up on players detail page
