update safari: little beautification. should work now
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@7058 1e3807c3-0949-0410-b78e-337b627472c1

--- a/maintainer/update-tmpl-safari.plist
+++ b/maintainer/update-tmpl-safari.plist
@@ -12,9 +12,7 @@
 				<key>CFBundleShortVersionString</key>
 					<string>{VERSION}</string>
 				<key>URL</key>
-					<string>
-					{UPDATE_LINK}
-					</string>
+					<string>{UPDATE_LINK}</string>
 			</dict>
 		</array>
 	</dict>
