chrome: permissons fix
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@7062 1e3807c3-0949-0410-b78e-337b627472c1

--- a/manifest.json
+++ b/manifest.json
@@ -182,7 +182,7 @@
 		"contextMenus",
 		"notifications",
 		"clipboardWrite",
-		"https://chpp.hattrick.org/*",
+		"*://chpp.hattrick.org/*",
 		"http://www.hattrick-youthclub.org/*",
 		"http://www.fantamondi.it/*"
 	],
