for fennec: new module: mobile-enhancements.js. should have only registered for fennec. not working though, need to register for all as of now
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@7092 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/foxtrick.properties
+++ b/content/foxtrick.properties
@@ -340,6 +340,7 @@ foxtrick.ShowLineupSet.LineupSet.desc=Highlight teams that have set a lineup
 foxtrick.ShowLineupSet.Ownerless.desc=Highlight ownerless teams
 foxtrick.ShowLineupSet.Winning.desc=Highlight winning teams
 foxtrick.SupporterStatsEnhancements.desc=Highlights current squad players in supporter stats
+foxtrick.MobileEnhancements.desc=Set of enhancements for mobile devices
 
 # -----------------------------------------------------------------------------
 
