--- a/content/foxtrick.properties
+++ b/content/foxtrick.properties
@@ -902,6 +902,12 @@ sort.down=Down
 action.clearCache=Clear cache
 action.clearCache.title=Clears FoxTricks Xml cache. FoxTrick downsloads extra information from Hattrick's servers on demand. Untill you close your browser, FoxTrick will use locally stored copies of those afterwards. On rare occasions they can get outdated. Clear the cache if you want FoxTrick to download those extra informations again.
 
+# fennec ui 
+pageAction.rightSidebar=Show right bar
+pageAction.mainContent=Show main content
+pageAction.leftSidebar=Show left bar
+pageAction.all=Show all
+
 # buttons
 button.ok=OK
 button.cancel=Cancel
