preferences: code reorganization and some tweaking.
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@7110 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/foxtrick.properties
+++ b/content/foxtrick.properties
@@ -963,8 +963,8 @@ prefs.screenshot=Screenshot
 # tabs in preferences page
 #tabs
 tab.main=Main
-tab.pagefiltered=Page modules
-tab.allfiltered=Universal modules
+tab.on_page=Modules on this page
+tab.universal=Universal modules
 tab.informationAggregation=Information Aggregation
 tab.shortcutsAndTweaks=Shortcuts and Tweaks
 tab.presentation=Presentation
@@ -1019,8 +1019,8 @@ about.developers=Developers
 about.translators=Translators
 about.designers=Designers
 
-filter.all=By categories
-filter.page=By last HT page
+prefs.view.by.category=View by category
+prefs.view.by.page=View by last HT page
 
 delete_foxtrick_branches_ask=Are you sure you want to restore to default settings?
 disable_all_foxtrick_modules_ask=Are you sure you want to disable all modules?
