About list update.
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@7114 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/foxtrick.properties
+++ b/content/foxtrick.properties
@@ -1013,8 +1013,7 @@ foxtrick.showReleaseNotes=Show release notes after FoxTrick updates
 foxtrick.versionReleaseNotes=Show release notes for:
 
 about.copyright=Copyright
-about.headDevelopers=Head Developers
-about.projectOwners=Project Owners
+about.maintainers=Maintainers
 about.developers=Developers
 about.translators=Translators
 about.designers=Designers
