preferences: added option to delete OAuth token/secret
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@7133 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/foxtrick.properties
+++ b/content/foxtrick.properties
@@ -7,6 +7,9 @@
 # the left side are idenitifiers for internal foxtrick use. leave them unchanged.
 # sentences starting with # are comments. leave them unchanged
 
+# Text with %-sign eg %s will be automatically replaced by the approriate text. 
+# Eg in "The price is %s." %s will be replaced by the selected amount of money. 
+# Thus, you need to include those %s entries into your text accordingly
 
 # Module descriptions
 # WARNING: your module description has to have the name foxtrick.MODULE_NAME.desc
@@ -922,6 +925,7 @@ button.authorize=Authorize
 button.export=Export
 button.import=Import
 button.restoreDefault=Restore default
+button.deleteToken=Delete token
 button.disableAll=Disable all
 
 status.loading=Loading…
@@ -984,6 +988,8 @@ foxtrick.prefs.captionHTCountry=Country
 foxtrick.prefs.captionCleanupBranch=Stored preferences
 foxtrick.prefs.captionLoadSavePrefs=Export or import preferences
 foxtrick.prefs.labelCleanupBranch=Restore default preferences (Only preferences, no personal settings.)
+# note to translators: the %here will be automatically converted into a link to chpp settings. The % sign gets removed, making 'here' the clickable link.
+foxtrick.prefs.labelDeleteToken=Delete OAuth token/secret. This will remove the access to Hattrick's CHPP files of this FoxTrick copy only. If you want to revoke FoxTrick's accesss entirely, use Hattrick's CHPP management %here. 
 foxtrick.prefs.labelDisableAll=Disable all modules
 foxtrick.prefs.labelSavePrefs=Export preferences and/or personal settings
 foxtrick.prefs.labelSavePrefs_Prefs=Preferences
@@ -1022,6 +1028,7 @@ prefs.view.by.category=View by category
 prefs.view.by.page=View by last HT page
 
 delete_foxtrick_branches_ask=Are you sure you want to restore to default settings?
+delete_oauth_ask=Delete OAuth token/secret? 
 disable_all_foxtrick_modules_ask=Are you sure you want to disable all modules?
 
 foxtrick.prefs.AdditionalOptions=Additional options
