Makefile: update for stable opera and safari (untestet)
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@7138 1e3807c3-0949-0410-b78e-337b627472c1

--- a/Info.plist
+++ b/Info.plist
@@ -13,7 +13,7 @@ a good reason to. They are for version bumps in Makefile.
 	<key>CFBundleDisplayName</key>
 	<string>FoxTrick</string>
 	<key>CFBundleIdentifier</key>
-	<string>www.ht-foxtrick.com</string>
+	<string>www.ht-foxtrick.com</string><!--key-->
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleVersion</key>
@@ -218,7 +218,7 @@ a good reason to. They are for version bumps in Makefile.
 		</dict>
 	</dict>
 	<key>Update Manifest URL</key>
-	<string>http://foxtrick.foundationhorizont.org/nightly/safari/update.plist</string>
+	<string>http://foxtrick.foundationhorizont.org/nightly/safari/update.plist</string><!--updateurl-->
 	<key>Website</key>
 	<string>http://code.google.com/foxtrick/</string>
 </dict>
