--- a/content/foxtrick.properties
+++ b/content/foxtrick.properties
@@ -989,7 +989,7 @@ foxtrick.prefs.captionCleanupBranch=Stored preferences
 foxtrick.prefs.captionLoadSavePrefs=Export or import preferences
 foxtrick.prefs.labelCleanupBranch=Restore default preferences (Only preferences, no personal settings.)
 # note to translators: the %here will be automatically converted into a link to chpp settings. The % sign gets removed, making 'here' the clickable link.
-foxtrick.prefs.labelDeleteToken=Delete OAuth token/secret. This will remove the access to Hattrick's CHPP files of this FoxTrick copy only. If you want to revoke FoxTrick's accesss entirely, use Hattrick's CHPP management %here. 
+foxtrick.prefs.labelDeleteToken=Delete OAuth token/secret for the selected teamid. This will remove the teams access to Hattrick's CHPP files of this FoxTrick copy only. If you want to revoke FoxTrick's access for a team entirely, use Hattrick's CHPP management %here. 
 foxtrick.prefs.labelDisableAll=Disable all modules
 foxtrick.prefs.labelSavePrefs=Export preferences and/or personal settings
 foxtrick.prefs.labelSavePrefs_Prefs=Preferences
@@ -1028,7 +1028,7 @@ prefs.view.by.category=View by category
 prefs.view.by.page=View by last HT page
 
 delete_foxtrick_branches_ask=Are you sure you want to restore to default settings?
-delete_oauth_ask=Delete OAuth token/secret? 
+delete_oauth_ask=Delete OAuth token/secret for teamid %s? 
 disable_all_foxtrick_modules_ask=Are you sure you want to disable all modules?
 
 foxtrick.prefs.AdditionalOptions=Additional options
