opera/safari: copy functions with Ctrl+V from textarea in copynotes feedback
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@7143 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/foxtrick.properties
+++ b/content/foxtrick.properties
@@ -709,7 +709,7 @@ CopyYouth.fixturesSource=Copy fixtures source
 CopyYouth.fixturesSource.copied=Fixtures source has been copied.
 CopyYouth.goto=Go to %s
 
-PasteClick.desc=Paste with SHIFT+LEFT MOUSE CLICK
+CopySelected.desc=Copy selection with Ctrl+V.
 
 foxtrick.tweaks.youthclub=hattrick-youthclub.org
 foxtrick.tweaks.copyskilltable=Copy skill table to clipboard (in HT-ML)
