--- a/Info.plist
+++ b/Info.plist
@@ -51,6 +51,7 @@ a good reason to. They are for version bumps in Makefile.
 				<string>content/util/inject.js</string>
 				<string>content/util/layout.js</string>
 				<string>content/util/links-box.js</string>
+				<string>content/util/log.js</string>
 				<string>content/util/match-view.js</string>
 				<string>content/util/misc.js</string>
 				<string>content/util/module.js</string>
