--- a/manifest.json
+++ b/manifest.json
@@ -19,6 +19,7 @@
 			"content/util/inject.js",
 			"content/util/layout.js",
 			"content/util/links-box.js",
+			"content/util/log.js",
 			"content/util/match-view.js",
 			"content/util/misc.js",
 			"content/util/module.js",
