safari: util/array.js added to info.plist
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@7177 1e3807c3-0949-0410-b78e-337b627472c1

--- a/Info.plist
+++ b/Info.plist
@@ -43,6 +43,7 @@ a good reason to. They are for version bumps in Makefile.
 				<string>content/lib/sha1.js</string>
 				<string>content/lib/jquery.js</string>
 				<string>content/util/api.js</string>
+				<string>content/util/array.js</string>
 				<string>content/util/copy-button.js</string>
 				<string>content/util/currency.js</string>
 				<string>content/util/html.js</string>
