context-menu-copy: moved chrome/safari function to context-menu-copy.js. merged safari with ff version. brought back special paste for safari context-menu paste
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@7178 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/foxtrick.properties
+++ b/content/foxtrick.properties
@@ -709,7 +709,8 @@ CopyYouth.fixturesSource=Copy fixtures source
 CopyYouth.fixturesSource.copied=Fixtures source has been copied.
 CopyYouth.goto=Go to %s
 
-CopySelected.desc=Copy selection with Ctrl+V.
+CopySelected.desc=Copy selection with Ctrl + C.
+SpecialPaste.desc=Paste with Shift + Left Click.
 
 foxtrick.tweaks.youthclub=hattrick-youthclub.org
 foxtrick.tweaks.copyskilltable=Copy skill table to clipboard (in HT-ML)
