safari: added www.hattrick-youthclub.org and www.fantamondi.it to allowed domains
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@7191 1e3807c3-0949-0410-b78e-337b627472c1

--- a/Info.plist
+++ b/Info.plist
@@ -212,6 +212,8 @@ a good reason to. They are for version bumps in Makefile.
 				<string>*.hat-trick.net</string>
 				<string>*.hattrick.interia.pl</string>
 				<string>*.hattrick.uol.com.br</string>
+				<string>www.hattrick-youthclub.org</string>
+				<string>www.fantamondi.it</string>
 			</array>
 			<key>Include Secure Pages</key>
 			<true/>
