--- a/content/foxtrick.properties
+++ b/content/foxtrick.properties
@@ -989,8 +989,9 @@ foxtrick.prefs.captionHTCountry=Country
 foxtrick.prefs.captionCleanupBranch=Stored preferences
 foxtrick.prefs.captionLoadSavePrefs=Export or import preferences
 foxtrick.prefs.labelCleanupBranch=Restore default preferences (Only preferences, no personal settings.)
-# note to translators: the %here will be automatically converted into a link to chpp settings. The % sign gets removed, making 'here' the clickable link.
-foxtrick.prefs.labelDeleteToken=Delete OAuth token/secret for the selected teamid. This will remove the teams access to Hattrick's CHPP files of this FoxTrick copy only. If you want to revoke FoxTrick's access for a team entirely, use Hattrick's CHPP management %here. 
+foxtrick.prefs.oauth.delete=Delete OAuth token/secret for the selected team.
+# NOTE - please preserve the braces, inner content will be converted to link
+foxtrick.prefs.oauth.delete.desc=Only applies to this browser. To entirely revoke FoxTrick's access for a team, use Hattrick's {CHPP management}.
 foxtrick.prefs.labelDisableAll=Disable all modules
 foxtrick.prefs.labelSavePrefs=Export preferences and/or personal settings
 foxtrick.prefs.labelSavePrefs_Prefs=Preferences
