manifest.json: added homepage_url
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@7210 1e3807c3-0949-0410-b78e-337b627472c1

--- a/manifest.json
+++ b/manifest.json
@@ -193,6 +193,7 @@
 		"default_title": "FoxTrick enabled"
 	},
 	"options_page" : "content/preferences.html",
+	"homepage_url": "http://http://code.google.com/p/foxtrick/",
 	"update_url" : "http://foxtrick.foundationhorizont.org/nightly/chrome/update.xml",
 	"version" : "0.7.9"
 }
