Change nightly update links and add/modify links at preferences help page.
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@7248 1e3807c3-0949-0410-b78e-337b627472c1

--- a/Info.plist
+++ b/Info.plist
@@ -222,7 +222,7 @@ a good reason to. They are for version bumps in Makefile.
 		</dict>
 	</dict>
 	<key>Update Manifest URL</key>
-	<string>http://foxtrick.foundationhorizont.org/nightly/safari/update.plist</string><!--updateurl-->
+	<string>https://www.foxtrick.org/nightly/safari/update.plist</string><!--updateurl-->
 	<key>Website</key>
 	<string>http://code.google.com/foxtrick/</string>
 </dict>
