--- a/manifest.json
+++ b/manifest.json
@@ -194,6 +194,6 @@
 	},
 	"options_page" : "content/preferences.html",
 	"homepage_url": "http://code.google.com/p/foxtrick/",
-	"update_url" : "http://foxtrick.foundationhorizont.org/nightly/chrome/update.xml",
+	"update_url" : "https://www.foxtrick.org/nightly/chrome/update.xml",
 	"version" : "0.7.9"
 }
