--- a/content/foxtrick.properties
+++ b/content/foxtrick.properties
@@ -1015,6 +1015,8 @@ link.hattrickForum=FoxTrick forum at Hattrick
 link.screenshots=Screenshots
 link.nightlyFirefox=Development builds for Firefox
 link.nightlyChrome=Development builds for Google Chrome
+link.nightlyOpera=Development builds for Opera
+link.nightlySafari=Development builds for Safari
 link.recentChanges=Recent changes
 
 foxtrick.showReleaseNotes=Show release notes after FoxTrick updates
