--- a/Info.plist
+++ b/Info.plist
@@ -224,6 +224,6 @@ a good reason to. They are for version bumps in Makefile.
 	<key>Update Manifest URL</key>
 	<string>https://www.foxtrick.org/nightly/safari/update.plist</string><!--updateurl-->
 	<key>Website</key>
-	<string>http://code.google.com/foxtrick/</string>
+	<string>http://www.foxtrick.org/</string>
 </dict>
 </plist>
