--- a/manifest.json
+++ b/manifest.json
@@ -193,7 +193,7 @@
 		"default_title": "FoxTrick enabled"
 	},
 	"options_page" : "content/preferences.html",
-	"homepage_url": "http://code.google.com/p/foxtrick/",
+	"homepage_url": "http://www.foxtrick.org/",
 	"update_url" : "https://www.foxtrick.org/nightly/chrome/update.xml",
 	"version" : "0.7.9"
 }
