Change app ID for Opera and Safari.
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@7311 1e3807c3-0949-0410-b78e-337b627472c1

--- a/Info.plist
+++ b/Info.plist
@@ -13,7 +13,7 @@ a good reason to. They are for version bumps in Makefile.
 	<key>CFBundleDisplayName</key>
 	<string>FoxTrick</string>
 	<key>CFBundleIdentifier</key>
-	<string>www.ht-foxtrick.com</string><!--key-->
+	<string>www.foxtrick.org</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleVersion</key>
