preferences.html: move showReleaseNotes options to changes tab.
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@7321 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/foxtrick.properties
+++ b/content/foxtrick.properties
@@ -1020,7 +1020,7 @@ link.nightlyOpera=Development builds for Opera
 link.nightlySafari=Development builds for Safari
 link.recentChanges=Recent changes
 
-foxtrick.showReleaseNotes=Show release notes after FoxTrick updates
+foxtrick.showReleaseNotes=Show release notes after every update
 foxtrick.versionReleaseNotes=Show release notes for:
 
 about.copyright=Copyright
