--- a/manifest.json
+++ b/manifest.json
@@ -185,6 +185,7 @@
 		"notifications",
 		"clipboardWrite",
 		"*://chpp.hattrick.org/*",
+		"*://*.foxtrick.org/*",
 		"http://www.hattrick-youthclub.org/*",
 		"http://www.fantamondi.it/*"
 	],
