moved browser UI stuff to ui.js
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@7354 1e3807c3-0949-0410-b78e-337b627472c1

--- a/Info.plist
+++ b/Info.plist
@@ -192,6 +192,7 @@ a good reason to. They are for version bumps in Makefile.
 				<string>content/shortcuts-and-tweaks/transfer-search-filters.js</string>
 				<string>content/shortcuts-and-tweaks/transfer-search-result-filters.js</string>
 				<string>content/entry.js</string>
+				<string>content/ui.js</string>
 				<string>content/loader-chrome.js</string>
 			</array>
 		</dict>
