--- a/manifest.json
+++ b/manifest.json
@@ -160,6 +160,7 @@
 			"content/shortcuts-and-tweaks/transfer-search-filters.js",
 			"content/shortcuts-and-tweaks/transfer-search-result-filters.js",
 			"content/entry.js",
+			"content/ui.js",
 			"content/loader-chrome.js"
 		],
 		"matches" : [
